--- a/plop-generators/packages/tsconfig/package.json
+++ b/plop-generators/packages/tsconfig/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "files": [
     "base.json",
-    "nextjs.json",
-    "react-library.json"
+    "react-library.json",
+    "vite.json"
   ]
 }
