--- a/plop-generators/packages/ui-lib/package.json
+++ b/plop-generators/packages/ui-lib/package.json
@@ -1,29 +1,25 @@
 {
   "name": "ui-lib",
   "version": "0.0.0",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "sideEffects": false,
   "license": "MIT",
   "files": [
     "dist/**"
   ],
   "scripts": {
-    "test": "jest --coverage",
-    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
     "lint": "TIMING=1 eslint src --fix",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "@types/node": "^17.0.27",
-    "@types/react": "^18.0.7",
-    "@types/react-dom": "^18.0.2",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "config": "*",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "tsconfig": "*",
-    "tsup": "^5.12.6",
-    "typescript": "^4.6.3"
+    "tsup": "^5.12.7",
+    "typescript": "^4.6.4"
   }
 }
