--- a/plop-generators/packages/ui-lib/package.json
+++ b/plop-generators/packages/ui-lib/package.json
@@ -9,15 +9,24 @@
     "dist/**"
   ],
   "scripts": {
+    "test": "jest --coverage",
     "lint": "TIMING=1 eslint src --fix",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "config": "*",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "react": "^18.1.0",
+    "ts-jest": "^28.0.1",
     "tsconfig": "*",
     "tsup": "^5.12.7",
     "typescript": "^4.6.4"
